# ER-Startseite

./: .gitignore  Makefile  README.md  check-prepush.sh  custom_apps_example.json  docker-compose.prod.yml  docker-compose.yml  setup_preflight.sh
.agent/workflows/: preflight.md
.github/: labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci-orchestrator.yml  ci.yml  cleanup.yml  lint.yml  nightly.yml  pr-assistant.yml  pr-check.yml  pr-orchestrator.yml  release.yml  rollback.yml  test.yml
backend/: .dockerignore  .env.example  Dockerfile  debug_repos.py  entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: apps.py  auth.py  config.py  media.py  proxy.py  registry.py
backend/app/core/: config.py  constants.py  exceptions.py  premium_apps.py  security.py
backend/app/repositories/: base.py  repos.py
backend/app/schemas/: app.py  common.py  config.py
backend/app/services/: app_service.py  auth_service.py  config_service.py  registry_service.py
backend/data/: apps.json
backend/tests/: test_manifest_fallback.py  test_smoke.py
docs/: index.html  style.css
docs/developer/: ADD_APP.md
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  defaults.ts  index.css  scrollbar.css  types.ts
frontend/src/components/: AnimatedLogo.tsx  AppDetailsModal.tsx  AppFormModal.tsx  AppIcon.tsx  LayoutMenu.tsx  (+4 more)
scripts/: version_manager.py
(+14 files in other folders)
